@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_capi.h,v 1.29 2005-10-07 18:49:40 dmorissette Exp $
+ * $Id: mitab_capi.h,v 1.30 2006-12-01 20:26:27 dmorissette Exp $
  *
  * Name:     mitab_capi.h
  * Project:  MapInfo TAB Read/Write library
@@ -32,7 +32,10 @@
  **********************************************************************
  *
  * $Log: mitab_capi.h,v $
- * Revision 1.29  2005-10-07 18:49:40  dmorissette
+ * Revision 1.30  2006-12-01 20:26:27  dmorissette
+ * Added mitab_is_field_indexed() and mitab_is_field_unique() (bug 1621)
+ *
+ * Revision 1.29  2005/10/07 18:49:40  dmorissette
  * Added methods for collections in C API (bug 1126)
  *
  * Revision 1.28  2005/09/29 20:09:52  dmorissette
@@ -322,7 +325,8 @@ const char MITAB_DLL * MITAB_STDCALL mitab_c_get_field_name(mitab_handle handle,
 int MITAB_DLL MITAB_STDCALL mitab_c_get_field_name_vb( mitab_handle handle, int field, char * name, int l );
 int MITAB_DLL MITAB_STDCALL mitab_c_get_field_width( mitab_handle handle, int field );
 int MITAB_DLL MITAB_STDCALL mitab_c_get_field_precision( mitab_handle handle, int field );
-
+int MITAB_DLL MITAB_STDCALL mitab_c_is_field_indexed( mitab_handle handle, int field );
+int MITAB_DLL MITAB_STDCALL mitab_c_is_field_unique( mitab_handle handle, int field );
 
 const char MITAB_DLL * MITAB_STDCALL mitab_c_get_field_as_string( mitab_feature feature, 
                                                    int field );
